cleaned up database creation notebook, created indexing notebook, started query notebook

--- a/notebooks/sqlite_database_creation_mews.ipynb
+++ b/notebooks/sqlite_database_creation_mews.ipynb
@@ -61,12 +61,12 @@
    "outputs": [],
    "source": [
     "#Playing with pre-filtering a bit\n",
-    "hop_sample.loc[(hop_sample['transaction_count'] >= 25) & (hop_sample['std_day_wait'] < 90)]"
+    "hop_sample.loc[(hop_sample['transaction_count'] >= 25) & (hop_sample['average_day_wait'] < 90)]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c26a797a",
+   "id": "ada80b1d",
    "metadata": {},
    "source": [
     "# Create the hop_team SQLite database\n",
@@ -75,7 +75,7 @@
     "# create the referrals table and add it to the database\n",
     "for chunk in tqdm(pd.read_csv('../data/DocGraph_Hop_Teaming_2018.csv', chunksize = 10000)):\n",
     "    # Do some preemptive filtering for likely \"accidental\" referrals\n",
-    "    chunk = chunk.loc[(chunk['transaction_count'] >= 25) & (chunk['std_day_wait'] < 90)]\n",
+    "    chunk = chunk.loc[(chunk['transaction_count'] >= 25) & (chunk['average_day_wait'] < 90)]\n",
     "    # append to referrals table\n",
     "    chunk.to_sql('referrals', db, if_exists = 'append', index = False)            "
    ]
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9872fc6",
+   "id": "363375e1",
    "metadata": {},
    "source": [
     "# create the providers table from npi/nppes data and add it to the database\n",
@@ -358,14 +358,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1117991",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "2a1e30e3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# make column names consistent with formatting of other tables\n",
-    "tax_deets.columns = [x.lower() for x in tax_deets.columns]\n",
+    "tax_deets.columns = [x.lower()\n",
+    "                     .replace(' ', '_') for x in tax_deets.columns]\n",
     "# make the taxonomy code column name match the taxonomy code column name in the provider table\n",
     "tax_deets = tax_deets.rename(columns = {'code' : 'taxonomy_code'})"
    ]
@@ -382,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69edb78c",
+   "id": "345c5f27",
    "metadata": {},
    "source": [
     "# create the taxonomy table and add it to the database\n",
@@ -427,6 +426,7 @@
     "#simplify column names\n",
     "zip_cbsa = zip_cbsa.rename(columns = {'usps_zip_pref_city' : 'city',\n",
     "                              'usps_zip_pref_state' : 'state'})\n",
+    "\n",
     "#get the leading zeroes back in place\n",
     "zip_cbsa['zip'] = zip_cbsa['zip'].astype(str).str.zfill(5)"
    ]
@@ -438,12 +438,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zip_cbsa"
+    "zip_cbsa.info()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "188ec2c4",
+   "id": "0dff79d9",
    "metadata": {},
    "source": [
     "# create the zip_cbsa table and add it to the database\n",
@@ -454,6 +454,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cd9dd9a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0edf7921",
    "metadata": {},
    "outputs": [],
    "source": []
