--- a/notebooks/sqlite_queries_mews.ipynb
+++ b/notebooks/sqlite_queries_mews.ipynb
@@ -1,17 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "906ec275",
-   "metadata": {},
-   "source": [
-    "## Import libraries"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bde7bb2c",
+   "execution_count": null,
+   "id": "1853596a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,60 +14,101 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aebe05c",
+   "id": "26cdacd9",
    "metadata": {},
    "source": [
-    "## Create indices"
+    "Build a profile of providers referring patients to the major hospitals in Nashville. Are certain specialties more likely to refer to a particular hospital over the others?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "eb98bf41",
+   "execution_count": null,
+   "id": "abca8440",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "index from_npi already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m db \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/hop_team_db.sqlite\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# referrals table\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCREATE INDEX from_npi ON referrals(from_npi)\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m db\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCREATE INDEX to_npi ON referrals(to_npi)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# provider table\u001b[39;00m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: index from_npi already exists"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db = sqlite3.connect('../data/hop_team_db.sqlite')\n",
+    "query = \"\"\"\n",
+    "SELECT npi, organization_name,  \n",
+    "FROM provider\n",
+    "LEFT JOIN taxonomy\n",
+    "USING(taxonomy_code)\n",
+    "WHERE entity_type_code = 2\n",
+    "AND mailing_address_city_name = 'NASHVILLE'\n",
+    "AND classification = 'General Acute Care Hospital'\n",
+    "\"\"\"\n",
     "\n",
-    "# referrals table\n",
-    "db.execute('CREATE INDEX from_npi ON referrals(from_npi)')\n",
-    "db.execute('CREATE INDEX to_npi ON referrals(to_npi)')\n",
-    "\n",
-    "# provider table\n",
-    "db.execute('CREATE INDEX taxonomy_code ON provider(taxonomy_code)')\n",
-    "db.execute('CREATE INDEX npi ON provider(npi)')\n",
-    "db.execute('CREATE INDEX entity_type_code ON provider(entity_type_code)')\n",
-    "db.execute('CREATE INDEX organization_name ON provider(organization_name)')\n",
-    "db.execute('CREATE INDEX mailing_address_city_name ON provider(mailing_address_city_name)')\n",
-    "db.execute('CREATE INDEX mailing_address_state_name ON provider(mailing_address_state_name)')\n",
-    "\n",
+    "with sqlite3.connect('../data/hop_team_db.sqlite') as db: \n",
+    "    nash_hosp = pd.read_sql(query, db)\n",
+    "    \n",
     "db.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5ae224ce",
+   "execution_count": null,
+   "id": "be669fc1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nash_hosp['organization_name'].value_counts().tail(42)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a697526e",
+   "id": "0365293f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "WITH nash_hosp AS (\n",
+    "    SELECT npi AS hosp_npi, organization_name AS hospital\n",
+    "    FROM provider\n",
+    "    LEFT JOIN taxonomy\n",
+    "    USING(taxonomy_code)\n",
+    "    WHERE entity_type_code = 2\n",
+    "    AND mailing_address_city_name = 'NASHVILLE'\n",
+    "    AND classification = 'General Acute Care Hospital'\n",
+    ")\n",
+    "SELECT from_npi, display_name, transaction_count, hospital\n",
+    "FROM referrals\n",
+    "INNER JOIN provider\n",
+    "ON from_npi = npi\n",
+    "INNER JOIN nash_hosp\n",
+    "ON to_npi = hosp_npi\n",
+    "LEFT JOIN taxonomy\n",
+    "USING(taxonomy_code)\n",
+    "WHERE transaction_count >= 50\n",
+    "AND average_day_wait > 50\n",
+    "\"\"\"\n",
+    "\n",
+    "with sqlite3.connect('../data/hop_team_db.sqlite') as db: \n",
+    "    nash_hosp_referers = pd.read_sql(query, db)\n",
+    "    \n",
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "613c8648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    nash_hosp_referers\n",
+    "    .groupby(['display_name', 'hospital'])['transaction_count']\n",
+    "    .sum()\n",
+    "    .to_frame()\n",
+    "    .reset_index()\n",
+    "    .sort_values('transaction_count', ascending = False)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f68e73",
    "metadata": {},
    "outputs": [],
    "source": []
